build: Add banana-checker
banana-checker will test for valid i18n files
Fix key in qqq.json to pass banana

Change-Id: I709eba37ef3f5352b9cea288be681a6e258bad09

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -48,7 +48,7 @@
             "Hamilton Abreu"
         ]
     },
-    "wikibaselexeme-desc": "{{desc|name=WikibaseCirrusSearch|url=https://www.mediawiki.org/wiki/Extension:WikibaseCirrusSearch}}",
+    "wikibasecirrus-desc": "{{desc|name=WikibaseCirrusSearch|url=https://www.mediawiki.org/wiki/Extension:WikibaseCirrusSearch}}",
     "wikibase-rescore-profile-prefix": "Default rescore profile for completion search. (See [https:\/\/www.elastic.co\/guide\/en\/elasticsearch\/reference\/current\/search-request-rescore.html Rescoring] in the Elastic documentation for explanation.)",
     "wikibase-rescore-profile-prefix-boost": "\"Rescore\" is not a verb. So translate as \"profile of rescore\" and not as \"to rescore a profile\".\n:''([https:\/\/www.mediawiki.org\/w\/index.php?title=Extension:CirrusSearch\/Profiles#Wikibase Reference] states: \"Added '''rescore profiles''' that are used for Wikibase entities\")''\n\n\"Completion search\" referred [[MediaWiki:Wikibaselexeme-rescore-profile-prefix\/en|here]] as \"Prefix (completion) search\" is a search to find possible completions for the existing typed characters (the \"prefix\", one guesses).\n:''([https:\/\/www.mediawiki.org\/w\/index.php?title=Extension:CirrusSearch\/Profiles#Context Reference] states: \"a '''rescore profile''' can be applied to regular search, '''prefix search''', Wikibase search, etc.\")''\n\nApparently related:\n* [[MediaWiki:Wikibaselexeme-rescore-profile-prefix\/en]]",
     "wikibase-rescore-profile-fulltext": "Default rescore profile for fulltext search. (See [https:\/\/www.elastic.co\/guide\/en\/elasticsearch\/reference\/current\/search-request-rescore.html Rescoring] in the Elastic documentation for explanation.)",
