implement inlabel search keyword
Can specify only text which searches labels_all, or
specify languages. The language is parsed as follows:

* Spec is approximately (brackets indicate optional): term[@lang[+|*][,...]]
* Multiple languages are separated by commas
* If query is for a single language named the empty string or '*'
 query labels_all
* The fallbacks associated with the language can be added by appending *
 to the language name. Fallbacks without en can be added by appending +
* See test cases for other examples

Bug: T215967
Depends-On: Ib0ab9069c7e63640edb6f9c315dd20d9ecd94160
Change-Id: I8869fca7df3e1e1ef3bbcf74d5d6f4283688a6e1

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -23,5 +23,8 @@
 	"wikibase-search-namespace-mix": "Mixing entity and article namespaces in search is currently not supported. Only entity namespaces will be searched.",
 	"wikibase-search-config-notfound": "Fulltext search configuration not found: $1",
 	"wikibase-search-config-badclass": "Bad query builder class: $1",
-	"wikibase-haswbstatement-feature-no-valid-statements": "haswbstatement keyword contains no valid statements"
+	"wikibase-haswbstatement-feature-no-valid-statements": "haswbstatement keyword contains no valid statements",
+	"wikibaescirrussearch-inlabel-unknown-language-code": "inlabel keyword contains unknown language code: $1",
+	"wikibasecirrussearch-inlabel-too-many-language-codes": "inlabel keyword provided too many language codes. Searching $1 of the $2 provided languages",
+	"wikibasecirrussearch-inlabel-no-query-provided": "inlabel keyword was provided an empty search string"
 }
