--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -58,5 +58,8 @@
 	"wikibase-search-namespace-mix": "Warning when using mixed namespaces in fulltext search",
 	"wikibase-search-config-notfound": "Error message displayed when configured search profile can not be loaded",
 	"wikibase-search-config-badclass": "Error message displayed when configured query builder can not be found or has wrong type",
-	"wikibase-haswbstatement-feature-no-valid-statements": "Error message when haswbstatement keyword has no valid arguments"
+	"wikibase-haswbstatement-feature-no-valid-statements": "Error message when haswbstatement keyword has no valid arguments",
+	"wikibaescirrussearch-inlabel-unknown-language-code": "Error message when an unknown language code is provided to the inlabel search keyword.\n\nParameters:\n* $1 - The unknown language code.",
+	"wikibasecirrussearch-inlabel-too-many-language-codes": "Error message displayed when inlabel keyword was provided more than the system limited number of languages.\n\nParameters:\n* $1 - The number of languages allowed.\n* $2 - The number of languages provided.",
+	"wikibasecirrussearch-inlabel-no-query-provided": "Error message displayed when inlabel keyword was provided an empty string to search for"
 }
