--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,24 +7,24 @@
 			"Jens Ohlig",
 			"Anja Jentzsch",
 			"Daniel Werner",
-			"Micha\u0142 \u0141azowik",
+			"Michał Łazowik",
 			"Addshore",
 			"Bene*",
-			"Lucie-Aim\u00e9e Kaffee"
+			"Lucie-Aimée Kaffee"
 		]
 	},
 	"wikibasecirrus-desc": "Wikibase extension for using CirrusSearch functionality",
-	"wikibase-rescore-profile-prefix": "Default rescore profile for completion search",
-	"wikibase-rescore-profile-prefix-boost": "Rescore profile for completion search with statement boosting",
-	"wikibase-rescore-profile-fulltext": "Default rescore profile for fulltext search",
-	"wikibase-rescore-profile-fulltext-phrase": "Rescore profile for fulltext search with phrase scoring",
-	"wikibase-search-bad-entity-type": "Bad entity type: $1",
-	"wikibase-search-bad-profile-name": "Bad search profile name: $1",
-	"wikibase-search-namespace-mix": "Mixing entity and article namespaces in search is currently not supported. Only entity namespaces will be searched.",
-	"wikibase-search-config-notfound": "Fulltext search configuration not found: $1",
-	"wikibase-search-config-badclass": "Bad query builder class: $1",
-	"wikibase-haswbstatement-feature-no-valid-statements": "haswbstatement keyword contains no valid statements",
-	"wikibaescirrussearch-inlabel-unknown-language-code": "inlabel keyword contains unknown language code: $1",
-	"wikibasecirrussearch-inlabel-too-many-language-codes": "inlabel keyword provided too many language codes. Searching $1 of the $2 provided languages",
-	"wikibasecirrussearch-inlabel-no-query-provided": "inlabel keyword was provided an empty search string"
+	"wikibasecirrus-inlabel-unknown-language-code": "inlabel keyword contains unknown language code: $1",
+	"wikibasecirrus-inlabel-too-many-language-codes": "inlabel keyword provided too many language codes. Searching $1 of the $2 provided languages",
+	"wikibasecirrus-inlabel-no-query-provided": "inlabel keyword was provided an empty search string",
+	"wikibasecirrus-rescore-profile-prefix": "Default rescore profile for completion search",
+	"wikibasecirrus-rescore-profile-prefix-boost": "Rescore profile for completion search with statement boosting",
+	"wikibasecirrus-rescore-profile-fulltext": "Default rescore profile for fulltext search",
+	"wikibasecirrus-rescore-profile-fulltext-phrase": "Rescore profile for fulltext search with phrase scoring",
+	"wikibasecirrus-search-bad-entity-type": "Bad entity type: $1",
+	"wikibasecirrus-search-bad-profile-name": "Bad search profile name: $1",
+	"wikibasecirrus-search-namespace-mix": "Mixing entity and article namespaces in search is currently not supported. Only entity namespaces will be searched.",
+	"wikibasecirrus-search-config-notfound": "Fulltext search configuration not found: $1",
+	"wikibasecirrus-search-config-badclass": "Bad query builder class: $1",
+	"wikibasecirrus-haswbstatement-feature-no-valid-statements": "haswbstatement keyword contains no valid statements"
 }
