--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,7 +15,7 @@
 	},
 	"wikibasecirrus-desc": "Wikibase extension for using CirrusSearch functionality",
 	"wikibasecirrus-inlabel-unknown-language-code": "inlabel keyword contains unknown language code: $1",
-	"wikibasecirrus-inlabel-too-many-language-codes": "inlabel keyword provided too many language codes. Searching $1 of the $2 provided languages",
+	"wikibasecirrus-inlabel-too-many-language-codes": "inlabel keyword provided too many language codes. Searching $1 of the $2 provided {{PLURAL:$2|language|languages}}",
 	"wikibasecirrus-inlabel-no-query-provided": "inlabel keyword was provided an empty search string",
 	"wikibasecirrus-rescore-profile-prefix": "Default rescore profile for completion search",
 	"wikibasecirrus-rescore-profile-prefix-boost": "Rescore profile for completion search with statement boosting",
