--- a/i18n/en.json
+++ b/i18n/en.json
@@ -14,8 +14,8 @@
 		]
 	},
 	"wikibasecirrus-desc": "Wikibase extension for using CirrusSearch functionality",
-	"wikibasecirrus-inlabel-unknown-language-code": "inlabel keyword contains unknown language code: $1",
-	"wikibasecirrus-inlabel-too-many-language-codes": "inlabel keyword provided too many language codes. Searching $1 of the $2 provided {{PLURAL:$2|language|languages}}",
+	"wikibasecirrus-keywordfeature-unknown-language-code": "$1 keyword contains unknown language code: $2",
+	"wikibasecirrus-keywordfeature-too-many-language-codes": "$1 keyword provided too many language codes. Searching $2 of the $3 provided {{PLURAL:$3|language|languages}}",
 	"wikibasecirrus-inlabel-no-query-provided": "inlabel keyword was provided an empty search string",
 	"wikibasecirrus-rescore-profile-prefix": "Default rescore profile for completion search",
 	"wikibasecirrus-rescore-profile-prefix-boost": "Rescore profile for completion search with statement boosting",
