Fix name of vagrant role in README
Fix name of vagrant role
wikibasecirrussearch in the
README, which was incorrect.

Remove enabling roles as these
are included as dependencies and
will be enabled automatically, see:
https://github.com/wikimedia/mediawiki-vagrant/blob/6a20a2159bd5fa1f940b411bbbb4564e12559f78/puppet/modules/role/manifests/wikibasecirrussearch.pp

Change-Id: Ia12371e49f9e76da95e1dce3a60bad30091e7ec1

--- a/README
+++ b/README
@@ -20,9 +20,7 @@ Development
 The fastest way to get started with WikibaseCirrusSearch development is to use MediaWiki-Vagrant.
 1.  Follow steps here: https://www.mediawiki.org/wiki/MediaWiki-Vagrant#Quick_start
 2.  Now execute the following:
-vagrant enable-role wikibase
-vagrant enable-role cirrussearch
-vagrant enable-role wikibase-cirrussearch
+vagrant enable-role wikibasecirrussearch
 vagrant provision
 
 This can take some time but it produces a clean development environment in a virtual machine
